refactor: use dynamic api path and return DTO for update endpoint